# gcp-ai-blueprint

./: .gitignore  README.md  pyproject.toml
backend/: main.py
